[package]
name = "bad-apsqrt"
version = "0.1.0"
edition = "2021"
description = "A naive, but consistent, square root function"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Solra Bizna <solra@bizna.name>"]
repository = "https://github.com/SolraBizna/bad-apsqrt"

[dependencies]
rustc_apfloat = "0.2.0"
